--- a/style.css
+++ b/style.css
@@ -57,3 +57,23 @@ img{
 .gallery img{
     border-radius: 5%;
 }
+
+.services{
+    color: crimson;
+}
+
+.services img{
+    border-style: solid;
+}
+
+footer {
+    color:#fff;
+    font-size: 1rem;
+    margin:0;
+    padding: 1rem;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
