--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 
-.navagation {
+.classj{
     background-color:#C876C4;
-    color:#C876C4;
+    text-align:center;
+}
+
+.fard{
+    align-content:center;
+    margin-right:400px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:27px;
+}
+
+.navbox {
+    height:128px;
+    width:207px;
 }
