--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
     background-color:#C876C4;
     text-align:center;
 }
-
 .fard{
     align-content:center;
-    margin-right:400px;
     font-family:Arial, Helvetica, sans-serif;
     font-size:27px;
+    text-align:center;
+    margin-right:200px;
+    color:white;
 }
 
 .navbox {
