--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@
 }
 
 .footer{
-    background-color:#C876C4;
+    background-color:#e29de0;
 }
 
 body{ 
-    background-image: url("https://th.bing.com/th/id/OIP.xAImYPr4lsjgMcawy1iEJgHaHa?pid=ImgDet&w=193&h=193&c=7");
+    background-image: url("https://th.bing.com/th/id/OIP.o3TweOa0tydveQvs6EToJQHaHa?pid=ImgDet&rs=1");
 }
 
 .vl {
-    border-left: 3px solid #C876C4;
+    border-left: 3px solid #e29de0;
     height: 500px;
 }
 
@@ -51,3 +51,12 @@ body{
     color: #edcfee;
 }
 
+.title{
+    color:#fffeff; 
+    font-size:40px; 
+    text-align:center;
+}
+
+.card-body{
+    text-align:center;
+}
