--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@
 
 .fard{
     font-family: 'K2D' , sans-serif;
-    font-size:300%;
+    font-size:2.5vw;
     color:white;
-    word-spacing: 20px;
+    word-spacing: 1.051vw;
+    max-height: 5.225vw;
+    background-color:#e29de0;
+    min-height: 20%;
 }
 
 .caro{
     width:100%;
-    height:500px;
+    height:26.274vw;
 }
 
 #footerimg{
@@ -36,7 +39,7 @@ body{
 
 .vl {
     border-left: 3px solid #e29de0;
-    height: 500px;
+    height: 26.274vw;
 }
 
 .number{
@@ -46,8 +49,8 @@ body{
     bottom: 12.58%;
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 1.261vw;
+    line-height: 1.524vw;
     display: flex;
     align-items: center;
     text-transform: capitalize;
@@ -56,24 +59,8 @@ body{
 
 .title{
     color:#fffeff; 
-    font-size:60px; 
+    font-size:3.153vw; 
     text-align:center;
-}
-
-
-.classp{
-    background-color: gray;
-    margin-left: 480px;
-    margin-left: -480px;
-}
-.classs{
-    background-color: gray;
-    margin-right: 90px;
-    text-align: center;
-}
-.classc{
-    background-color: gray;
-    margin-left: 90px;
 }
 h1{
     color:white;
@@ -81,8 +68,8 @@ h1{
 }
 .board{
     
-    height:300px;
-    width:200px;
+    height:15.765vw;
+    width:10.51vw;
 }
 
 .vertical {
@@ -114,22 +101,22 @@ h1{
 }
 
 .menu{
-    font-size:40px;
+    font-size:2.102vw;
     color:rgb(70,54,54);
     text-align:center;
 }
 
 .desc{
-    font-size:15px;
+    font-size:0.788vw;
     text-align:left;
     border-top:solid 1px;
     border-right:solid 1px;
     margin-right:49.7%;
-    margin-left:5px;
+    margin-left:.263vw;
 }
 
 .price{
-    font-size:15px;
+    font-size:.788vw;
     text-align:center;
     border-top:solid 1px;
     border-left:solid 1px;
@@ -140,11 +127,26 @@ h1{
     background-color:#f0f0f0;
     margin-left:10vw;
     margin-right:10vw;
-    height:500px;
+    height:26.274vw;
 }
 
 .gal .card-body{
     background-color:white;
     border-color:#e29de0;
     border-style: solid;
+}
+
+.back-to-top {
+    position: fixed;
+    right: 2rem;
+    bottom: 2rem;
+    z-index:20;
+    border-color:#9c3299;
+    color:#705454;
+    background-color:#f0f0f0;
+    border-radius:5px;
+  }
+
+.hidden{
+    display:none;
 }
